@@ -5,6 +5,7 @@ Date: ???
   Bugfixes:
     - Basic Chemistry 2 tech missing green science #269
     - Fix multiple startitems in rock-chest and playerinventory #268
+    - Fixed setting "SpaceX ignore tech price multiplier" #273
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.11
 Date: 06.06.2022
